--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,4 +73,30 @@ a.download::before {
   max-width: 1500px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 2%;
+}
+
+.content {
+  display: grid;
+  gap: 30px;
+  margin: 40px 0;
+}
+
+.content.one {
+  grid-template-columns: 1fr;
+}
+
+.content.two {
+  grid-template-columns: 1fr 1fr;
+}
+
+.content.three {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media (max-width: 768px) {
+  .content.two,
+  .content.three {
+    grid-template-columns: 1fr;
+  }
 }
